(library
 (name stdcompat)
 (public_name stdcompat)
 (wrapped false)
 (flags (:standard -nolabels -w -3))
 (foreign_stubs
  (language c)
  (names stdcompat__stubs))
 (modules
   stdcompat__arg
   stdcompat__arg_s
   stdcompat__array
   stdcompat__arrayLabels
   stdcompat__arrayLabels_s
   stdcompat__array_s
   stdcompat__atomic
   stdcompat__atomic_s
   stdcompat__bool
   stdcompat__bool_s
   stdcompat__buffer
   stdcompat__buffer_s
   stdcompat__bytes
   stdcompat__bytesLabels
   stdcompat__bytesLabels_s
   stdcompat__bytes_s
   stdcompat__char
   stdcompat__char_s
   stdcompat__digest
   stdcompat__digest_s
   stdcompat__domain
   stdcompat__domain_s
   stdcompat__dynarray
   stdcompat__dynarray_s
   stdcompat__either
   stdcompat__either_s
   stdcompat__ephemeron
   stdcompat__ephemeron_s
   stdcompat__filename
   stdcompat__filename_s
   stdcompat__float
   stdcompat__float_s
   stdcompat__format
   stdcompat__format_s
   stdcompat__fun
   stdcompat__fun_s
   stdcompat__hashtbl
   stdcompat__hashtbl_ext
   stdcompat__hashtbl_s
   stdcompat__in_channel
   stdcompat__in_channel_s
   stdcompat__init
   stdcompat__int
   stdcompat__int32
   stdcompat__int32_s
   stdcompat__int64
   stdcompat__int64_s
   stdcompat__int_s
   stdcompat__lazy
   stdcompat__lazy_s
   stdcompat__lexing
   stdcompat__lexing_s
   stdcompat__list
   stdcompat__listLabels
   stdcompat__listLabels_s
   stdcompat__list_s
   stdcompat__map
   stdcompat__map_s
   stdcompat__moreLabels
   stdcompat__moreLabels_s
   stdcompat__native
   stdcompat__nativeint
   stdcompat__nativeint_s
   stdcompat__option
   stdcompat__option_s
   stdcompat__out_channel
   stdcompat__out_channel_s
   stdcompat__pervasives
   stdcompat__pervasives_s
   stdcompat__printexc
   stdcompat__printexc_s
   stdcompat__printf
   stdcompat__printf_s
   stdcompat__queue
   stdcompat__queue_s
   stdcompat__random
   stdcompat__random_s
   stdcompat__result
   stdcompat__result_s
   stdcompat__root
   stdcompat__seq
   stdcompat__seq_s
   stdcompat__set
   stdcompat__set_s
   stdcompat__stack
   stdcompat__stack_s
   stdcompat__stdlib
   stdcompat__stdlib_s
   stdcompat__string
   stdcompat__stringLabels
   stdcompat__stringLabels_s
   stdcompat__string_s
   stdcompat__sys
   stdcompat__sys_s
   stdcompat__tools
   stdcompat__uchar
   stdcompat__uchar_s
   stdcompat__unit
   stdcompat__unit_s
   stdcompat__weak
   stdcompat__weak_s
   stdcompat))

(executable
 (name stdcompat_tests)
 (modules stdcompat_tests)
 (libraries stdcompat))

(rule
 (copy stdcompat__native.ml_native stdcompat__native.ml))

(rule
 (copy stdcompat__init.mli.in stdcompat__init.ml.in))

(include dune-rules.inc)
