opam-version: "2.0"
synopsis: "Compatibility module for OCaml standard library"
description:
  "Compatibility module for OCaml standard library allowing programs to use some recent additions to the OCaml standard library while preserving the ability to be compiled on former versions of OCaml."
maintainer: "Sébastien Hinderer <sebastien.hinderer@inria.f>"
authors: "Thierry Martinez <martinez@nsup.org>"
license: "LGPL-2.1-or-later"
homepage: "https://github.com/ocamllibs/stdcompat"
bug-reports: "https://github.com/ocamllibs/stdcompat/issues"
depends: [
  "ocaml" {>= "4.11" & < "5.4"}
  "dune" {>= "2.0"}
]
build: [
  ["dune" "subst"] {dev}
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
]
dev-repo: "git+https://github.com/ocamllibs/stdcompat.git"
version: "21.0"
